manifests/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata: 
  name: website
  labels:
    - name: website
