manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  namespace: website
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: registry.dev.hrl.internal:5000/website:1
        imagePullPolicy: Always
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 512Mi
            cpu: "1"
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /health
            port: 3000
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /health
            port: 3000
