manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: website
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/health-check-path: "/health"
    traefik.ingress.kubernetes.io/health-check-port: "80"
spec:
  selector:
    app: website
  type: LoadBalancer
  loadBalancerIP: "k3s.dev.hrl.internal"
  ports:
    - name: http
      port: 80
      targetPort: 3000
