manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website
  namespace: website
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "k3s.dev.hrl.internal"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 80
